--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@bugsnag/react-native": "^8.7.0",
     "@gorhom/bottom-sheet": "^5.2.6",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-native-firebase/app": "^23.4.1",
     "@react-native-firebase/remote-config": "^23.4.1",
     "@react-native/new-app-screen": "0.82.0",
@@ -26,6 +27,7 @@
     "expo": "^54.0.13",
     "expo-dev-client": "^6.0.15",
     "expo-updates": "^29.0.12",
+    "formik": "^2.4.6",
     "openapi-fetch": "^0.14.1",
     "openapi-react-query": "^0.5.0",
     "react": "19.1.0",
@@ -51,6 +53,7 @@
     "react-native-worklets": "0.5.1",
     "reactotron-react-native": "^5.1.18",
     "styled-components": "^6.1.19",
+    "yup": "^1.7.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
