--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-dev-client": "^6.0.15",
     "expo-updates": "^29.0.12",
     "formik": "^2.4.6",
+    "lottie-react-native": "^7.3.4",
     "openapi-fetch": "^0.14.1",
     "openapi-react-query": "^0.5.0",
     "react": "19.1.0",
