--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "^23.4.1",
     "@react-native-firebase/remote-config": "^23.4.1",
     "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.10",
     "@tanstack/react-query": "^5.90.3",
