--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.10",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@tanstack/react-query": "^5.90.3",
     "base-64": "^1.0.0",
+    "dayjs": "^1.11.18",
     "expo": "^54.0.13",
     "expo-dev-client": "^6.0.15",
     "expo-updates": "^29.0.12",
@@ -46,12 +49,14 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "^4.1.3",
+    "react-native-reanimated-carousel": "^4.0.3",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-tracking-transparency": "^0.1.2",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "0.5.1",
     "reactotron-react-native": "^5.1.18",
     "styled-components": "^6.1.19",
