--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@bugsnag/react-native": "^8.7.0",
     "@gorhom/bottom-sheet": "^5.2.6",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-firebase/app": "^23.4.1",
     "@react-native-firebase/remote-config": "^23.4.1",
@@ -27,6 +28,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@tanstack/react-query": "^5.90.3",
     "base-64": "^1.0.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "expo": "^54.0.13",
     "expo-dev-client": "^6.0.15",
