--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "generate-type": "npx openapi-typescript openapi.yaml -o src/schemes/openapi.d.ts"
   },
   "dependencies": {
     "@ant-design/icons-react-native": "^2.3.2",
