--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-gesture-handler": "^2.28.0",
     "react-native-keyboard-controller": "^1.19.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.9.1",
     "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "^4.1.3",
     "react-native-reanimated-carousel": "^4.0.3",
@@ -57,6 +58,7 @@
     "react-native-safe-area-context": "^5.5.2",
     "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.1",
+    "react-native-tab-view": "^4.2.0",
     "react-native-toast-message": "^2.3.3",
     "react-native-tracking-transparency": "^0.1.2",
     "react-native-vector-icons": "^10.3.0",
