feat: add admin refresh token endpoint and update community post functionality
- Added a new endpoint for admin refresh token in OpenAPI schema.
- Updated community post components to include communityId in relevant interfaces.
- Enhanced CommunityScreen to support creating posts with a modal.
- Implemented hooks for creating posts and handling image uploads.
- Improved styling for CommunityScreen and CreatePostModal.
- Fixed HomeScreen to correctly handle post navigation with communityId.
- Updated ArtistCommunityModal to improve community joining functionality.
- Added new dependencies for image cropping and navigation bar handling.

--- a/ios/Ventidole/Info.plist
+++ b/ios/Ventidole/Info.plist
@@ -58,6 +58,20 @@
 	</dict>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>This app uses data to provide personalized content and ads.</string>
+  <key>NSCameraUsageDescription</key>
+	<string>Access to your Camera is required to pass verification and add photos to the profile and events.</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Allow to discover the React Native dev server on your network.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Location access is required to provide location-based features.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location access is required to provide location-based features while using the app.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access to your Photos is required to add photos to the profile and events.</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>Access to your data is required to provide personalized ads.</string>
+	<key>RCTNewArchEnabled</key>
+	<true/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Black.ttf</string>
