--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk-next": "^13.4.1",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-image-crop-picker": "^0.51.1",
     "react-native-keyboard-controller": "^1.19.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.9.1",
@@ -58,6 +59,7 @@
     "react-native-safe-area-context": "^5.5.2",
     "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.1",
+    "react-native-system-navigation-bar": "^2.6.4",
     "react-native-tab-view": "^4.2.0",
     "react-native-toast-message": "^2.3.3",
     "react-native-tracking-transparency": "^0.1.2",
